failures/clang_other_error_VGyT78.i.stderr.txt
src/import/importd.c:461:36: error: use of undeclared identifier 'SYSTEMD_PULL_PATH'
                        cmd[k++] = SYSTEMD_PULL_PATH;
                                   ^
1 error generated.
